# IntelliWatch

./: CMakeLists.txt  Makefile  README.md  sdkconfig  sdkconfig.old
TMP112/include/: tmp112.h
components/BH1750/: CmakeLists.txt  bh1750_i2c.c  bh1750_i2c_hal.c
components/BH1750/include/: bh1750_i2c_hal.h
components/BQ25896/: CMakeLists.txt  Kconfig  bq25896.c
components/BQ25896/include/: bq25896.h
components/DRV2605/: CmakeLists.txt  DRV2605.c  i2c-easy.c
components/DRV2605/include/: DRV2605.h  DRV2605_REG.h
components/MAX30102/: CMakeLists.txt  Kconfig  max30102.c
components/MAX30102/include/: max30102.h
components/TMP112/: i2c-easy.c  tmp112.c
components/ahrs/: CMakeLists.txt
components/mpu9250/: ak8963.c  mpu9250.c
components/mpu9250/include/: mpu9250.h
components/pictures/: CmakeLists.txt
main/: CMakeLists.txt  idf_component.yml  main.c
main/ulp/: ulp_main.c
